--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mariadb://localhost:3306/bgj387
+spring.datasource.username=bgj387
+spring.datasource.password=toCUCI24i
+spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:h2:mem:testdb
