--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>bookstore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bookstore</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Bookstore exercise for school project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
